# caffeination

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LIVE_BUILD_PROMPT.md  PLAN_B.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/coffee-taxonomy/: SKILL.md
.claude/skills/live-build-playbook/: SKILL.md
.claude/skills/stack-patterns/: SKILL.md
.github/workflows/: ci.yml
app/: config.py  db.py  drinks.py  identity.py  main.py  menu.py  models.py  orders.py  users.py
app/static/: coffee.css  site.webmanifest
app/templates/: _dash_header.html  _dashboard.html  _drink_card.html  _drink_fields.html  _drink_form.html  _name_edit.html  _name_form.html  _new_person_slot.html  _onboard.html  _order_section.html  _person_edit.html  base.html  index.html
deploy/: .env.example  README.md  caffeine-rch.caddy  docker-compose.yml
tests/: conftest.py  test_config.py  test_drinks.py  test_health.py  test_manage_flow.py  test_name_flow.py  test_oneoff_and_edit.py  test_order_flow.py  test_people_flow.py  test_till_summary.py
